@@ -30,6 +30,13 @@ It is possible to drag a Github / Bitbucket / Google code  project URL from your
 
 Once the project has been cloned, just select the `Create a general Project` option: a general project will be created, and if Automatic configuration is enabled, recognized as a Leiningen Project.
 
+=== REPL Text Input Area visibility
+
+- The `REPL View` shows a visible separation between the log area and the text input area
+- A `<type clojure code here>` placeholder is also visible when the input area doesn't have the focus
+
+Fix Issue #560
+
 == Bug fixes
 
 - Leiningen dependencies are updated in the background. They do not block the UI until they're finished anymore.
